<resources>
    <string name="app_name">lesson_four_exercise_two</string>
    <string name="tvPictures">Pictures</string>
    <string name="tvJokes">Jokes</string>
    <string name="tvFacts">Facts</string>
    <string name="tvQuotes">Quotes</string>
    <string name="tvSeaImages">Sea Images</string>
    <string name="tvEmotionImages">Emotion Images</string>
    <string name="tvAuthor">About the Author</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. "\n" Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</string>
    <string name="JokeOne">\"What do you call a factory that makes okay products?\"
        "\n" \"A satisfactory.\"</string>
    <string name="JokeTwo">\"Why do seagulls fly over the ocean?\" "\n" \"Because if they flew over the bay, we\'d call them bagels.\"</string>
    <string name="JokeThree">\"What did one wall say to the other?\" "\n" \"I\'ll meet you at the corner.\"</string>
    <string name="quote1">\"Believe you can, and you are halfway there.\" - Theodore Roosevelt</string>
    <string name="quote2">\"Life is like riding a bicycle. To keep your balance, you must always keep moving.\" - Albert Einstein</string>
    <string name="quote3">\"You are never too old to set another goal or to dream a new dream.\" - C.S. Lewis</string>
    <string name="fact1">Some cats are allergic to people.  FYI for all you people allergic to cats: they might be allergic to you, too! It\'s pretty uncommon due to the fact that we bathe ourselves more often than other species and don\'t shed as much hair or dead skin, but yes, it does happen.</string>
    <string name="fact2">Apple Pie isn\'t actually American at all.  The next time you call something \"as American as apple pie,\" you might want to consider the fact that neither apple pies nor apples originally came from America. Apples are in fact native to Asia, and the first recorded recipe for apple pie was actually written in England.</string>
    <string name="fact3">The Crown Jewels contain the two biggest cut diamonds on Earth.  They both came from the Cullinan Diamond, a 3,106-carat gem found in South Africa in 1905. The largest stone, called the Great Star of Africa, is in the Sovereign\'s Sceptre, while the second largest is mounted in the Imperial State Crown.</string>
</resources>