<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPictures"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/tvPictures"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/tvJokes"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvJokes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPictures" />

    <TextView
        android:id="@+id/tvFacts"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJokes" />

    <TextView
        android:id="@+id/tvQuotes"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFacts" />

    <TextView
        android:id="@+id/tvSeaImages"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSeaImages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuotes" />

    <TextView
        android:id="@+id/tvEmotionImages"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEmotionImages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeaImages" />

    <TextView
        android:id="@+id/tvAuthor"
        style="@style/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmotionImages" />
</androidx.constraintlayout.widget.ConstraintLayout>